--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BlueBlue21!</title>
+    <meta name="description" content="Hi, It's BlueBlue21! 👋" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <meta property="og:title" content="BlueBlue21!" />
+    <meta property="og:description" content="Hi, It's BlueBlue21! 👋" />
+    <meta name="theme-color" content="#1e73f5" />
   </head>
   <body>
     <div id="root"></div>
